feat(sari): add reporting delay marker to SARI chart
Add vertical dotted line 3 weeks before last data point with annotation
"Daten bis hierher größtenteils gemeldet*" to indicate incomplete data.
Include footnote explaining that data may change due to corrections.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                     <div id="sari-chart"></div>
                 </div>
 
+                <p class="footnote">*Da laufend mit Korrekturen und Nachmeldungen zu rechnen ist, kann sich der Datenbestand noch verändern.</p>
+
                 <div id="sari-error" class="hidden">
                     <p>Fehler beim Laden der SARI-Daten. Bitte später erneut versuchen.</p>
                 </div>
