feat(sari): add demographics chart with age/gender breakdown
- New stacked bar chart showing SARI admissions by age group and gender
- Filter by Bundesland, Station, and time range slider
- Toggle between absolute numbers and per 100k population
- Uses same diagnosis colors as main SARI chart (W=dark, M=light)
- Styled dropdowns and dual-handle range slider for time selection

--- a/index.html
+++ b/index.html
@@ -87,6 +87,69 @@
             </div>
         </section>
 
+        <section class="sari-section">
+            <header>
+                <h2>Aufnahmen nach Alter und Geschlecht</h2>
+                <p class="subtitle">Daten: SARI-Dashboard Österreich</p>
+            </header>
+
+            <div class="sari-content">
+                <div id="sari-demographics-controls">
+                    <div class="control-group">
+                        <label for="sari-demo-bundesland">Bundesland:</label>
+                        <select id="sari-demo-bundesland" class="select-input">
+                            <option value="AT">Österreich (Gesamt)</option>
+                            <option value="W">Wien</option>
+                            <option value="NÖ">Niederösterreich</option>
+                            <option value="OÖ">Oberösterreich</option>
+                            <option value="S">Salzburg</option>
+                            <option value="T">Tirol</option>
+                            <option value="V">Vorarlberg</option>
+                            <option value="K">Kärnten</option>
+                            <option value="ST">Steiermark</option>
+                            <option value="BGL">Burgenland</option>
+                        </select>
+                    </div>
+                    <div class="control-group">
+                        <label for="sari-demo-station">Station:</label>
+                        <select id="sari-demo-station" class="select-input">
+                            <option value="ALL">Alle Stationen</option>
+                            <option value="N">Normalstation</option>
+                            <option value="I">Intensivstation</option>
+                        </select>
+                    </div>
+                    <div class="control-group">
+                        <label class="toggle-label">
+                            <input type="checkbox" id="sari-demo-per100k" checked>
+                            <span class="toggle-text">pro 100.000 Einw.</span>
+                        </label>
+                    </div>
+                </div>
+
+                <div class="zeitraum-slider-wrapper">
+                    <div class="zeitraum-slider-container">
+                        <span id="sari-demo-start-label" class="slider-label left">Lade...</span>
+                        <div class="dual-slider">
+                            <div class="slider-track"></div>
+                            <div id="slider-range" class="slider-range"></div>
+                            <input type="range" id="sari-demo-start" class="range-slider" min="0" max="100" value="0">
+                            <input type="range" id="sari-demo-end" class="range-slider" min="0" max="100" value="100">
+                        </div>
+                        <span id="sari-demo-end-label" class="slider-label right">Lade...</span>
+                    </div>
+                </div>
+
+                <div id="sari-demographics-chart-container">
+                    <div id="sari-demographics-loading">Lade Daten...</div>
+                    <div id="sari-demographics-chart"></div>
+                </div>
+
+                <div id="sari-demographics-error" class="hidden">
+                    <p>Fehler beim Laden der Daten. Bitte später erneut versuchen.</p>
+                </div>
+            </div>
+        </section>
+
         <footer>
             <p>
                 Datenquellen:
