feat: add GoatCounter analytics (privacy-friendly)

--- a/index.html
+++ b/index.html
@@ -236,5 +236,7 @@
     </div>
 
     <script src="app.js"></script>
+    <script data-goatcounter="https://pasrom.goatcounter.com/count"
+            async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
