feat: add Impressum to footer
Add legal notice (Impressum) section in footer with contact info.
Includes email and GitHub profile link.

--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
                 <a href="https://abwasser.ages.at" target="_blank" rel="noopener">AGES Abwasser-Monitoring</a> |
                 <a href="https://www.sari-dashboard.at" target="_blank" rel="noopener">SARI-Dashboard</a>
             </p>
+            <p class="impressum">
+                Impressum: Roman P. |
+                <a href="mailto:smarts_toss6o@icloud.com">smarts_toss6o@icloud.com</a> |
+                <a href="https://github.com/pasrom" target="_blank" rel="noopener">GitHub</a>
+            </p>
         </footer>
     </div>
 
