fix: update MedUni Wien Sentinel source URL
Point to correct virus epidemiology monitoring page

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <p>
                 Datenquellen:
                 <a href="https://abwasser.ages.at" target="_blank" rel="noopener">AGES Abwasser-Monitoring</a> |
-                <a href="https://www.meduniwien.ac.at/virusepidemiologie" target="_blank" rel="noopener">MedUni Wien Sentinel</a> |
+                <a href="https://viro.meduniwien.ac.at/forschung/virus-epidemiologie-2/ueberwachung-der-zirkulation-respiratorischer-viren-in-oesterreich/" target="_blank" rel="noopener">MedUni Wien Sentinel</a> |
                 <a href="https://www.sari-dashboard.at" target="_blank" rel="noopener">SARI-Dashboard</a>
             </p>
             <p class="impressum">
